[package]
name = "wickdb-playground"
version = "0.1.0"
authors = ["David Groomes <dwgroomes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wickdb = { path = "wickdb" }
